# synth

./: CMakeLists.txt
examples/: detuned_dminor_stereo.cpp  main.cpp  mono_sine.cpp  pink_noise.cpp  pitch_vibrato.cpp  poly_instrument_progression.cpp  register_example.h  simple_timeline.cpp  sine_volume_square.cpp  stereo_square_copier.cpp  supersaw_unison.cpp  white_noise.cpp
src/: channel_aggregator.hpp  channel_copier.hpp  constant.hpp  dahdsr.hpp  factory.hpp  frequency.hpp  generators.hpp  instrument.hpp  math.hpp  mix.hpp  mono_adapter.hpp  mono_instrument.hpp  mull_add.hpp  note_frequency.hpp  notes.hpp  peak_limiter.hpp  poly_instrument.hpp  single_voice_instrument.hpp  strong_types.hpp  switch_value.hpp  synthesizer.hpp  timeline.hpp  utility.hpp  voice.hpp  volume.hpp
